components/default/awx-config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app awx
  labels:
    app.kubernetes.io/instance: *app
    app.kubernetes.io/name: *app
  annotations:
    gethomepage.dev/href: "https://awx.${CLUSTER_DOMAIN}"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Ingress
    gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/selfhst/icons@main/png/ansible.png
spec:
  parentRefs:
    - name: ${GATEWAY_NAME}
      namespace: ${GATEWAY_NAMESPACE}
      sectionName: https
  hostnames: ["awx.${CLUSTER_DOMAIN}"]
  rules:
    - backendRefs:
        - name: awx-service
          port: 80
